# SOTCooker

./: .gitignore  README.md
Deployment/: buildSetup.iss  deploy.py  manifest.json
SOTCooker/: CMakeLists.txt  CircularProgressBar.hpp  Constants.hpp  GraphicsUtils.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ProgResources.qrc  main.cpp
SOTCooker/Libs/: CMakeLists.txt
SOTCooker/Libs/Proto/: CMakeLists.txt  CookerProto.hpp  CookerProtoConstants.hpp  ProtoHelp.cpp  ProtoHelp.hpp  SOTCooker.proto  SOTCookerDefaults.hpp
SOTCooker/Libs/SotTools/: CMakeLists.txt  CookerAudioProgressNotifier.cpp  CookerAudioProgressNotifier.hpp  ProgressTimer.hpp  SOTCooker.cpp  SOTCooker.hpp  SOTCookerUtils.hpp
SOTCooker/Libs/TextToSpeech/: TextToSpeech.hpp
SOTCooker/Libs/Windows/: CMakeLists.txt  DialogGetKeyCode.cpp  DialogGetKeyCode.hpp  DialogGetKeyCode.ui  WinEventHandler.cpp  WinEventHandler.hpp  WinUtils.cpp  WinUtils.hpp
